# monopp

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: copy_to_runtime_path.cmake  macros.cmake  target_code_style_support.cmake
cmake/modules/: FindMono.cmake  Mono.cmake
monopp/: CMakeLists.txt  mono_array.cpp  mono_array.h  mono_assembly.cpp  mono_assembly.h  mono_build_config.h.in  mono_class.cpp  mono_class.h  mono_class_field.cpp  mono_class_field.h  mono_class_instance.cpp  mono_class_instance.h  mono_class_property.cpp  mono_class_property.h  mono_config.h  mono_domain.cpp  mono_domain.h  mono_exception.cpp  mono_exception.h  mono_field.cpp  mono_field.h  mono_field_invoker.h  mono_gc_handle.cpp  mono_gc_handle.h  mono_internal_call.h  mono_jit.cpp  mono_jit.h  mono_logger.cpp  mono_logger.h  mono_method.cpp  mono_method.h  mono_method_invoker.h  mono_method_thunk.h  mono_noncopyable.h  mono_object.cpp  mono_object.h  mono_property.cpp  mono_property.h  mono_property_invoker.h  mono_static_function.cpp  (+11 more)
monort/: CMakeLists.txt
monort/managed/: CMakeLists.txt
monort/managed/Core/: Object.cs
monort/managed_interface/: CMakeLists.txt  mono_object_wrapper.h  mono_pod_wrapper.h  types_conversion.h
monort/managed_interface/core/: object.cpp  object.h
monort/monort/: CMakeLists.txt  mono_object_wrapper.h  mono_pod_wrapper.h  monort.h
monort/monort/core/: managed_object.cpp  managed_object.h  object.cpp  object.h
tests/: CMakeLists.txt  example_suite.cpp  main.cpp  monopp_suite.cpp  monopp_suite.h  monort_suite.cpp  test.cs  tests.cpp  tests.h
tests/managed/: CMakeLists.txt  compiler.cs  tests.cs
tests/native/: CMakeLists.txt  main.cpp  tests.cpp  tests.h
tests/tests/: CMakeLists.txt  example_suite.cpp  example_suite.h  main.cpp  monopp_suite.cpp  monopp_suite.h  monort_suite.cpp  monort_suite.h
tests/tests/suite/: suite.hpp
tests/tests/suitepp/: suitepp.hpp
